# aiconfigurator

./: .coderabbit.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ATTRIBUTIONS.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  pyproject.toml  pytest.ini
aic-core/: API.md  pyproject.toml
aic-core/rust/aiconfigurator-core/: Cargo.toml  README.md  deny.toml
aic-core/rust/aiconfigurator-core/docs/: design_doc.html  parity-audit-2026-07-14.md  parity-scan-report.md  parity-scan-runbook.md  perf-speedup-report.md  python-dedup-plan.md
aic-core/rust/aiconfigurator-core/parity_tests/: README.md  benchmark_engine_step.py  test_compile_engine_parity.py  test_engine_step_parity.py  test_engine_step_perf.py
aic-core/rust/aiconfigurator-core/src/: config.rs  lib.rs  memory.rs  py.rs  session.rs
aic-core/rust/aiconfigurator-core/src/common/: enums.rs  error.rs  mod.rs  system_spec.rs
aic-core/rust/aiconfigurator-core/src/engine/: mod.rs  runtime.rs  spec.rs
aic-core/rust/aiconfigurator-core/src/fpm/: correction.rs  metrics.rs  mod.rs  model.rs  options.rs  regression.rs  samples.rs  tests.rs
aic-core/rust/aiconfigurator-core/src/operators/: attention.rs  base.rs  communication.rs  dsa.rs  dsv4.rs  elementwise.rs  embedding.rs  gemm.rs  mamba.rs  mhc.rs  mla.rs  mod.rs  moe.rs  moe_dispatch.rs  msa.rs  op.rs  overlap.rs  util_empirical.rs  vision.rs  wideep_mla.rs  wideep_moe.rs
aic-core/rust/aiconfigurator-core/src/perf_database/: attention.rs  communication.rs  dsa.rs  dsv4.rs  dsv4_megamoe.rs  gemm.rs  interpolation.rs  mhc.rs  mla.rs  mod.rs  moe.rs  parquet_loader.rs  perf_interp.rs  state_space.rs  wideep.rs  wideep_mla.rs  wideep_moe.rs
aic-core/rust/aiconfigurator-core/tests/: embedded_round_trip.rs  memory_round_trip.rs  pyo3_smoke.rs
aic-core/rust/tests/public-api/: Cargo.toml
aic-core/rust/tests/public-api/src/: lib.rs
aic-core/src/aiconfigurator_core/: __init__.py  _aiconfigurator_core.pyi
aic-core/src/aiconfigurator_core/model_configs/: MiniMaxAI--MiniMax-M2.5_config.json  MiniMaxAI--MiniMax-M3_config.json  Qwen--Qwen3-235B-A22B-FP8_config.json  Qwen--Qwen3-30B-A3B-FP8_config.json  Qwen--Qwen3-32B-FP8-Static-PerTensor_config.json  Qwen--Qwen3-32B-FP8-Static-PerTensor_hf_quant_config.json  Qwen--Qwen3-32B-FP8_config.json  Qwen--Qwen3-Coder-480B-A35B-Instruct_config.json  Qwen--Qwen3-VL-235B-A22B-Instruct_config.json  Qwen--Qwen3-VL-2B-Instruct_config.json  Qwen--Qwen3-VL-30B-A3B-Instruct_config.json  Qwen--Qwen3-VL-4B-Instruct_config.json  Qwen--Qwen3-VL-8B-Instruct_config.json  Qwen--Qwen3.5-122B-A10B_config.json  XiaomiMiMo--MiMo-7B-Base_config.json  XiaomiMiMo--MiMo-V2-Flash_config.json  deepseek-ai--DeepSeek-V4-Flash_config.json  deepseek-ai--DeepSeek-V4-Pro_config.json  google--gemma-4-26B-A4B_config.json  meta-llama--Llama-4-Maverick-17B-128E-Instruct_config.json  meta-llama--Llama-4-Scout-17B-16E-Instruct_config.json  meta-llama--Meta-Llama-3.1-405B_config.json  meta-llama--Meta-Llama-3.1-70B_config.json  mistralai--Mixtral-8x22B-v0.1_config.json  moonshotai--Kimi-K2-Instruct_config.json  nvidia--DeepSeek-V3.1-NVFP4_config.json  nvidia--DeepSeek-V3.1-NVFP4_hf_quant_config.json  nvidia--GLM-5-NVFP4_hf_quant_config.json  nvidia--GLM-5.1-NVFP4_config.json  nvidia--GLM-5.1-NVFP4_hf_quant_config.json  nvidia--GLM-5.2-NVFP4_config.json  nvidia--GLM-5.2-NVFP4_hf_quant_config.json  nvidia--Kimi-K2.5-NVFP4_config.json  nvidia--Llama-3.1-70B-Instruct-FP8_config.json  nvidia--Llama-3.1-70B-Instruct-FP8_hf_quant_config.json  nvidia--Llama-3_3-Nemotron-Super-49B-v1_config.json  nvidia--MiniMax-M2.5-NVFP4_config.json  nvidia--MiniMax-M2.5-NVFP4_hf_quant_config.json  nvidia--MiniMax-M2.7-NVFP4_config.json  nvidia--MiniMax-M2.7-NVFP4_hf_quant_config.json  (+15 more)
aic-core/src/aiconfigurator_core/sdk/: __init__.py  afd_partition.py  common.py  config.py  config_builders.py  engine.py  errors.py  inference_summary.py  memory.py  perf_database.py  performance_result.py  rust_engine_step.py  step_estimate.py  system_spec.py  utils.py
aic-core/src/aiconfigurator_core/sdk/backends/: base_backend.py  factory.py  sglang_backend.py  trtllm_backend.py  vllm_backend.py
aic-core/src/aiconfigurator_core/sdk/models/: README.md  __init__.py  base.py  deepseek.py  deepseek_v32.py  deepseek_v4.py  gemma4.py  gpt.py  helpers.py  hybrid_moe.py  llama.py  minimax_m3.py  moe.py  nemotron_h.py  nemotron_nas.py  qwen35.py  qwen3vl.py  vit_ops.py
aic-core/src/aiconfigurator_core/sdk/operations/: README.md  __init__.py  afd_transfer.py  attention.py  base.py  communication.py  dsa.py  dsv4.py  elementwise.py  embedding.py  gemm.py  mamba.py  mla.py  moe.py  msa.py  overlap.py  util_empirical.py
aic-core/src/aiconfigurator_core/sdk/perf_interp/: __init__.py  config.py  engine.py
aic-core/src/aiconfigurator_core/systems/: a100_pcie.yaml  a100_sxm.yaml  a30.yaml  b200_sxm.yaml  b300_sxm.yaml  b60.yaml  gb200.yaml  gb300.yaml  h100_pcie.yaml  h100_sxm.yaml  h200_sxm.yaml  l4.yaml  l40s.yaml  op_kernel_source_manifest.yaml  rtx_pro_6000_server.yaml  silicon_sample.csv
aic-core/src/aiconfigurator_core/systems/data/a100_sxm/attention/sglang/0.5.10/: context_attention_perf.parquet  generation_attention_perf.parquet
aic-core/src/aiconfigurator_core/systems/data/a100_sxm/attention/sglang/0.5.12/: reuse.yaml
aic-core/src/aiconfigurator_core/systems/data/a100_sxm/attention/sglang/0.5.9/: context_attention_perf.parquet  generation_attention_perf.parquet
aic-core/src/aiconfigurator_core/systems/data/a100_sxm/attention/trtllm/1.0.0/: collection_meta.yaml  (+2 more)
aic-core/src/aiconfigurator_core/systems/support_matrix/: a100_sxm.csv  b200_sxm.csv  b300_sxm.csv  b60.csv  gb200.csv  gb300.csv  h100_sxm.csv  h200_sxm.csv  index.json  l40s.csv  rtx_pro_6000_server.csv
poc/: .gitignore  Cargo.toml  README.md  design_doc.html  pyproject.toml  pytest.ini
poc/data/: build_gemm_parquet.py
poc/python/aic_poc/: __init__.py  mock_model.py  reference.py
poc/python/aic_step/: __init__.py
poc/src/: db.rs  engine.rs  lib.rs  op.rs  py.rs
poc/tests/: test_e2e.py
(+1670 files in other folders)
