# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "aiconfigurator-core"
version = "0.11.0"
edition = "2021"
description = "Rust-native core latency estimator for AIConfigurator"
license = "Apache-2.0"
repository = "https://github.com/ai-dynamo/aiconfigurator"
documentation = "https://docs.rs/aiconfigurator-core"
readme = "README.md"

[lib]
name = "aiconfigurator_core"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
bincode = "1.3"
parquet = { version = "55", default-features = false, features = ["zstd", "snap"] }
pyo3 = { version = "0.23", features = ["abi3-py310"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"

[features]
# `extension-module` is enabled ONLY by the maturin/wheel build (via
# `[tool.maturin] features = ["pyo3/extension-module"]` in pyproject.toml).
# It must NEVER be a default feature: `cargo build`/`cargo test` link
# libpython (via `auto-initialize`) for the Rust->Python embedding path,
# while the maturin-built `.so` skips libpython linkage.
default = []
# Enable when building as a standalone Rust binary that embeds Python
# (cargo build / cargo test). Do NOT enable when used as a dep of a
# PyO3 extension-module crate — maturin sets extension-module instead.
#
# NOTE: the integration tests that embed Python (tests/pyo3_smoke.rs,
# tests/embedded_round_trip.rs, tests/memory_round_trip.rs — they call
# `Python::with_gil`) need `auto-initialize`, so run them with
# `cargo test --features embed-python`. Plain `cargo test` leaves those
# specific tests failing with "Python interpreter is not initialized"
# (expected — not a regression).
embed-python = ["pyo3/auto-initialize"]

[dev-dependencies]
tempfile = "3.23"
