# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "aiconfigurator-core-public-api"
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]
aiconfigurator-core = { path = "../../aiconfigurator-core" }
